# python-project-83

./: .env.sample  .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py  page.py
page_analyzer/templates/: index.html  page.html  sites.html
page_analyzer/templates/layouts/: default.html
page_analyzer/templates/partials/: flash-messages.html
