[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Abdujabbar MIRKHALIKOV <abdujabbar.mirkhalikov@prestataire.sewan.fr>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
pip = "^22.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
